--- a/black_friday_python.ipynb
+++ b/black_friday_python.ipynb
@@ -896,6 +896,15 @@
    "source": [
     "sns.boxplot(x=df['Product_Category_1'], y=df['Purchase'], hue=df['Gender'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#suppose i made some chnges here"
+   ]
   }
  ],
  "metadata": {
